# LearnCpp

./: README.md
1Basics/: 11developing.cpp  2Comments.cpp  4initialization.cpp  5iostream.cpp  xquiz.cpp
2BasicsFunctions&Files/: 10PreprocesorIntro  10PreprocesorIntro.cpp  1functions  1functions.cpp  2value-returningFunctions  2value-returningFunctions.cpp  4FunctionParameters&Arguments  4FunctionParameters&Arguments.cpp  7ForwardDeclarations&Definitions  7ForwardDeclarations&Definitions.cpp
2BasicsFunctions&Files/11HeaderFiles/: add.cpp  main
2BasicsFunctions&Files/12HeaderGuards/: add.h  main.cpp
2BasicsFunctions&Files/8multipleCodeFiles/: add.cpp  main.cpp
2BasicsFunctions&Files/xquiz/quiz1/: main  main.cpp
2BasicsFunctions&Files/xquiz/quiz2/: io.cpp  main.cpp
2BasicsFunctions&Files/xquiz/quiz3/: io.cpp  io.h  main  main.cpp
3Debugging/IntegratedDebugger/: CMakeLists.txt  README.md
4Fundamental Data Types/10introductionToIfStatements/: main.cpp
4Fundamental Data Types/12staticCast/: main.cpp  main2.cpp
4Fundamental Data Types/xQuiz/: main.cpp  main2.cpp
5Constants&Strings/7string/: main  main.cpp
5Constants&Strings/xQuiz/: main  main.cpp
6Operators/3Reminder&Exponentiationls/: main  main.cpp
6Operators/8LogicalOperators/: main.cpp
6Operators/xQuiz/: main.cpp
7ScopeDurationLinkage/3LocalVariables/: main.cpp
OBitManipultion/2BitwiseOperators/: main.cpp
OBitManipultion/3BitMasks/: main.cpp
OBitManipultion/4Converting/: main.cpp
